# News-Scraper-Server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  html_collector.py  implementationplan.md  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  middleware.py  router.py
app/classification/: __init__.py
app/collectors/: __init__.py  base.py  exceptions.py  manager.py  metrics.py  models.py  registry.py  rss.py
app/core/: config.py  logging.py  redis.py
app/database/: __init__.py  base.py  enums.py  session.py
app/entities/: __init__.py
app/extraction/: __init__.py
app/models/: __init__.py  classification.py  collection.py  documents.py  entities.py  events.py  keywords.py  sources.py  taxonomy.py
app/prompts/: __init__.py
app/relevance/: __init__.py
app/repositories/: __init__.py  base.py  interfaces.py
app/scheduler/: __init__.py  base.py
app/services/: __init__.py
app/source_registry/: __init__.py  dependencies.py  exceptions.py  schemas.py  security.py  service.py  validation.py
app/workers/: __init__.py  base.py
content_extraction_engine/extraction_engine/: README.md  demo.py  engine.py  (+1 more)
docs/: database_architecture.md  database_layer_phase1.md  domain_model_specification.md  infrastructure_structure.md
duplicate_detection_engine/: __init__.py
migrations/: README.md  env.py
scripts/: run_dev.ps1
tests/: conftest.py  test_collector_framework.py  test_rss_collector.py  test_source_registry_routes.py  test_source_registry_validation.py  test_system_routes.py
(+63 files in other folders)
